<?xml version="1.0"?>
<package>
  <name>roslisp_executable_tests</name>
  <version>0.0.0</version>
  <description>
    A simple test for the new executable generation catkin-macro for roslisp.
  </description>

  <author email="georg.bartels@cs.uni-bremen.de">Georg Bartels</author>
  <maintainer email="georg.bartels@cs.uni-bremen.de">Georg Bartels</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslisp</build_depend>
  <run_depend>roslisp</run_depend>

</package>
